samples/_failures_safe/1761468548_db9462_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed0ee50f.c: In function ‘main’:
./samples/SAFE/__tmp_ed0ee50f.c:153:27: error: expected ‘;’ at end of input
  153 |                     printf
      |                           ^
      |                           ;
./samples/SAFE/__tmp_ed0ee50f.c:153:21: error: expected declaration or statement at end of input
  153 |                     printf
      |                     ^~~~~~
./samples/SAFE/__tmp_ed0ee50f.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ed0ee50f.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ed0ee50f.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ed0ee50f.c:153:21: error: expected declaration or statement at end of input
